Heroku postbuild to build React from /client

--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "react-flask-monorepo",
-  "private": true,
+  "name": "root",
   "version": "1.0.0",
-  "engines": { "node": "20.x" },
+  "private": true,
   "scripts": {
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm --prefix client install && npm --prefix client run build"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm --prefix client ci && npm --prefix client run build"
   }
 }
